# folder-compare-rs

./: Cargo.toml  README.md  TODO.md
.github/workflows/: create_release.yml
src/: checksum.rs  checksums.rs  command_async.rs  compare.rs  main.rs  message.rs  verifier.rs
test/new/: 0003_changed_size.txt
