[package]
name = "folder-compare-rs"
version = "0.1.0"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0.115", features = [ "derive" ] }
serde_json = "1.0.57"
walkdir = "2.3.1"
indicatif = "0.15.0"
colored = "2.0.0"
sha1 = "0.6.0"
tokio = { version = "0.2.22", features = [ "full", "tracing" ] }

rayon = "1.3.1"

